# RR---SW-Eng-Technical-Assessment

./: README.md
a_programming_paradigms/: .gitignore  CMakeLists.txt  README.md  USAGE.md  design-choices.md
a_programming_paradigms/include/: enum_macro.hpp  media_player.hpp
a_programming_paradigms/src/: enum_macro.cpp  main.cpp  media_player.cpp
a_programming_paradigms/tests/: base_tests.cpp
b_code_refactor/: CMakeLists.txt  README.md  design-choices.md
b_code_refactor/include/: command.hpp  robot.hpp  util.hpp  vec2.hpp
b_code_refactor/src/: command.cpp  main.cpp  robot.cpp  util.cpp
c_system_design/: README.md  system_overview.md
